overflow fix

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -13,7 +13,7 @@
     border-radius: 1rem;
     padding: 2rem;
 
-    overflow: scroll;
+    overflow-y: auto;
   }
 
   #main-author {
