--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -36,7 +36,7 @@
     height: 1px;
     width: calc(100% - 8rem);
 
-    margin: 0 10px;
+    margin: 0 8px;
 
     background-color: #f2d492;
   }
